--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@ development:
   database: GoodLife_dev
   pool: 5
   username: root
-  password:
+  password: admin
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
